--- a/courses/static/Scaffolding/designers.html
+++ b/courses/static/Scaffolding/designers.html
@@ -4,6 +4,21 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
+
+
+    <style>
+        ul {
+            padding: 10px;
+        }
+
+            ul li {
+                padding: 10px;
+            }
+
+        p {
+            padding: 10px;
+        }
+    </style>
 </head>
 <body>
     <div id="designers" class="accordion-body in collapse" style="height: auto;">
