--- a/courses/static/Scaffolding/designers.html
+++ b/courses/static/Scaffolding/designers.html
@@ -6,7 +6,15 @@
     <title></title>
 
 
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Montserrat">
+
     <style>
+
+        body {
+            font-family: 'Tangerine', serif;
+        }
+
         ul {
             padding: 10px;
         }
