--- a/courses/static/Scaffolding/overview.html
+++ b/courses/static/Scaffolding/overview.html
@@ -5,8 +5,15 @@
     <meta charset="utf-8" />
     <title></title>
 
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Montserrat">
 
     <style>
+
+        body {
+            font-family: 'Tangerine', serif;
+        }
+
         ul {
             padding: 10px;
         }
@@ -19,6 +26,7 @@
             padding: 10px;
         }
     </style>
+
 </head>
 <body>
     <div class="span7">
