--- a/courses/static/Scaffolding/ERECTORS-DISMANTLERS.html
+++ b/courses/static/Scaffolding/ERECTORS-DISMANTLERS.html
@@ -4,6 +4,28 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
+
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Montserrat">
+
+    <style>
+
+        body {
+            font-family: 'Tangerine', serif;
+        }
+
+        ul {
+            padding: 10px;
+        }
+
+            ul li {
+                padding: 10px;
+            }
+
+        p {
+            padding: 10px;
+        }
+    </style>
 </head>
 <body>
     <div id="erectors_dismantlers" class="accordion-body in collapse" style="height: auto;">
