--- a/courses/static/Scaffolding/designers.html
+++ b/courses/static/Scaffolding/designers.html
@@ -16,15 +16,15 @@
         }
 
         ul {
-            padding: 10px;
+            margin: 5px;
         }
 
             ul li {
-                padding: 10px;
+                padding: 5px;
             }
 
         p {
-            padding: 10px;
+            padding: 5px;
         }
     </style>
 </head>
