--- a/courses/static/Scaffolding/overview.html
+++ b/courses/static/Scaffolding/overview.html
@@ -29,6 +29,13 @@
 
 </head>
 <body>
+
+    <div>
+        <audio controls>
+            <source src="audio/overview.mp3" type="audio/mpeg">
+          Your browser does not support the audio element.
+          </audio>
+    </div>
     <div class="span7">
 
         <h4><strong>What Is a Scaffold?</strong></h4>
