--- a/courses/static/Scaffolding/Users.html
+++ b/courses/static/Scaffolding/Users.html
@@ -29,6 +29,14 @@
 
 </head>
 <body>
+
+    <div>
+        <audio controls>
+            <source src="audio/Users.mp3" type="audio/mpeg">
+          Your browser does not support the audio element.
+          </audio>
+    </div>
+
     <div id="users" class="accordion-body in collapse" style="height: auto;">
         <div class="accordion-inner">
             <div class="alert alert-warning span3 pull-right">
