--- a/courses/static/Scaffolding/gr/Fall Protection Requirements.html
+++ b/courses/static/Scaffolding/gr/Fall Protection Requirements.html
@@ -47,6 +47,14 @@
     </style>
 </head>
 <body>
+
+    <div>
+        <audio controls>
+            <source src="../audio/Fall Protection Requirements_-converted.mp3" type="audio/mpeg">
+          Your browser does not support the audio element.
+          </audio>
+    </div>
+
     <div class="accordion-group">
         <div class="accordion-heading">
             <h3>What are the fall protection requirements for all scaffolds?</h3>
