--- a/courses/static/Scaffolding/gr/Falling Object Protection.html
+++ b/courses/static/Scaffolding/gr/Falling Object Protection.html
@@ -25,6 +25,14 @@
     </style>
 </head>
 <body>
+
+    <div>
+        <audio controls>
+            <source src="../audio/Falling Object Protection_-converted.mp3" type="audio/mpeg">
+          Your browser does not support the audio element.
+          </audio>
+    </div>
+
     <div class="accordion-group">
         <div class="accordion-heading">
             <h3>What protections from overhead falling objects do the standards provide?</h3>
