--- a/courses/static/Scaffolding/gr/Scaffold Platform Construction.html
+++ b/courses/static/Scaffolding/gr/Scaffold Platform Construction.html
@@ -23,7 +23,13 @@
         }
     </style>
 </head>
-<body>
+<body> 
+    <div>
+    <audio controls>
+        <source src="../audio/Scaffold Platform Construction_-converted.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+      </audio>
+</div>
     <div class="accordion-group">
         <div class="accordion-heading">
             <h3>What are scaffold platform construction requirements?</h3>
