--- a/courses/static/Scaffolding/ERECTORS-DISMANTLERS.html
+++ b/courses/static/Scaffolding/ERECTORS-DISMANTLERS.html
@@ -28,6 +28,14 @@
     </style>
 </head>
 <body>
+
+    <div>
+        <audio controls>
+            <source src="audio/ERECTORS-DISMANTLERS.mp3" type="audio/mpeg">
+          Your browser does not support the audio element.
+          </audio>
+    </div>
+
     <div id="erectors_dismantlers" class="accordion-body in collapse" style="height: auto;">
         <div class="accordion-inner">
             <div class="alert alert-warning span3 pull-right">
