--- a/courses/static/Scaffolding/designers.html
+++ b/courses/static/Scaffolding/designers.html
@@ -29,6 +29,12 @@
     </style>
 </head>
 <body>
+    <div>
+        <audio controls>
+            <source src="audio/Designers.mp3" type="audio/mpeg">
+          Your browser does not support the audio element.
+          </audio>
+    </div>
     <div id="designers" class="accordion-body in collapse" style="height: auto;">
         <div class="accordion-inner">
             <p>Scaffold designers are workers who are qualified to design scaffolds.</p>
