--- a/courses/static/Scaffolding/gr/Access Requirements.html
+++ b/courses/static/Scaffolding/gr/Access Requirements.html
@@ -25,7 +25,12 @@
     </style>
 </head>
 <body>
-
+    <div>
+        <audio controls>
+            <source src="../audio/Access Requirements_-converted.mp3" type="audio/mpeg">
+          Your browser does not support the audio element.
+          </audio>
+    </div>
     <div class="accordion-group">
         <div class="accordion-heading">
             <h3>What are the requirements for access to scaffolds?</h3>
