--- a/courses/static/Scaffolding/gr/Capacity.html
+++ b/courses/static/Scaffolding/gr/Capacity.html
@@ -29,6 +29,12 @@
 
 </head>
 <body>
+    <div>
+        <audio controls>
+            <source src="../audio/Capacity_-converted.mp3" type="audio/mpeg">
+          Your browser does not support the audio element.
+          </audio>
+    </div>
     <div class="accordion-group">
         <div class="accordion-heading">
             <h3>What are the capacity requirements for all scaffolds?</h3>
