--- a/courses/static/4-hour-supported-scaffold/Supported Scaffolds/Frame or Fabricated.html
+++ b/courses/static/4-hour-supported-scaffold/Supported Scaffolds/Frame or Fabricated.html
@@ -125,6 +125,8 @@
 
     <div class="container-fluid">
         
+        <input type="hidden" id="audio" value="audio/Frame or Fabricated-converted.mp3">
+        
         <div class="mt-4 mb-4">
             <audio controls>
                 <source src="audio/Frame or Fabricated-converted.mp3" type="audio/mpeg">
