--- a/courses/static/4-hour-supported-scaffold/OSHA 1926 Overview/Mast Climbers.html
+++ b/courses/static/4-hour-supported-scaffold/OSHA 1926 Overview/Mast Climbers.html
@@ -123,12 +123,12 @@
 </head>
 <body>
 
-    <div class="container">
+    <div class="container-fluid">
 <div class="row mt-2">
     <div class="col">
 
-        <div class="embed-responsive embed-responsive-21by9">
-            <video controls>
+        <div class="embed-responsive embed-responsive-1by1">
+            <video controls style="width: 100%;height: 524px;">
                 <source src="Construction_PPE_PPT_v.05.18.15.mp4" type="audio/mpeg">
               Your browser does not support the audio element.
               </video>
