--- a/courses/static/4-hour-supported-scaffold/m6/fall-distance-educator/question1b.html
+++ b/courses/static/4-hour-supported-scaffold/m6/fall-distance-educator/question1b.html
@@ -23,7 +23,7 @@
 
     <style>
         #LayoutDiv1a img {
-            max-height: 800px;
+            width: 100%;
         }
 
         .question {
@@ -151,11 +151,8 @@
                                 feet or less). He ended more than 3 feet from the ground. </li>
                             <li class="facts">He did not hit the ground. </li>
                         </ul>
-                        <p>&nbsp;</p>
-                        <p>&nbsp;</p>
-                        <p>&nbsp;</p>
-
-                        <p class="buttons"><a class="one" href="question2a.html">Start scenario 2 <img
+                   
+                        <p class="buttons mt-3"><a class="one" href="question2a.html">Start scenario 2 <img
                                     src="images/arrow-rt.png" alt="arrow" class="arrow" border="0"></a></p>
                         <p class="buttons"><a class="one" href="question1a.html"><img src="images/arrow-lt.png"
                                     alt="arrow" class="arrow"> Back</a></p>
