--- a/courses/static/4-hour-supported-scaffold/m6/fall-distance-educator/question3a.html
+++ b/courses/static/4-hour-supported-scaffold/m6/fall-distance-educator/question3a.html
@@ -24,6 +24,7 @@
     <style>
         #LayoutDiv1a img {
             max-height: 500px;
+            max-width: 100%;
         }
 
         .question {
