--- a/courses/static/falls/Stuck-by and fall-m6/housekeeping.html
+++ b/courses/static/falls/Stuck-by and fall-m6/housekeeping.html
@@ -5,7 +5,12 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
-
+    <link rel="stylesheet" href="https:fonts.googleapis.com/css?family=Montserrat">
+    <style>
+        body {
+            font-family: 'Montserrat', sans-serif;
+        }
+    </style>
 </head>
 
 <body>
@@ -14,13 +19,13 @@
             <div class="col">
 
                 <strong> 1926.25(a)</strong>
-                <br>
+                <br>   <br>
                 During the course of construction, alteration, or repairs, form and scrap lumber with protruding nails,
                 and all other debris, shall be kept cleared from work areas, passageways, and stairs, in and around
                 buildings or other structures.
-                <br>  <br>
+                <br> <br>
                 <strong>1926.25(b)</strong>
-                <br>  <br>
+                <br> <br>
                 Combustible scrap and debris shall be removed at regular intervals during the course of construction.
                 Safe means shall be provided to facilitate such removal.
                 <br><br>
