--- a/courses/static/falls/personal-fall-arrest-systems/lanyards.html
+++ b/courses/static/falls/personal-fall-arrest-systems/lanyards.html
@@ -52,7 +52,7 @@
                 <p>
                     A deceleration device is a mechanism (e.g., tearing or deforming lanyards) that serves to dissipate
                     energy during a fall to limit the energy and stress imposed on a worker during a fall. Deceleration
-                    occurs over a maximum distance of 3.5 feet (see 29 CFR 1926.502(d)(16)(iv)). Deceleration devices
+                    occurs over a maximum distance of 3.5 feet. Deceleration devices
                     vary widely. Examples include:
                 </p>
 
@@ -67,8 +67,7 @@
                             about the work area, but retracts as necessary to maintain slight tension, preventing the
                             line
                             from becoming slack. The drum is under slight tension during normal worker movement and
-                            automatically locks the drum when the line is extracted too rapidly (see 29 CFR
-                            1926.500(b)).
+                            automatically locks the drum when the line is extracted too rapidly.
                             Self-retracting lanyards and lifelines that limit free fall to two feet or less need to
                             sustain,
                             at a minimum, 3,000 pounds applied to the device with the lanyard in the fully extended
