--- a/students/__templates/students/reviews/assessment.html
+++ b/students/__templates/students/reviews/assessment.html
@@ -89,9 +89,9 @@
                                     </td>
                                 </tr>
 
-                                <tr title="The materials and handouts were helpful.">
+                                <tr title="The materials and the downloads were helpful. ">
                                     <td>
-                                        The materials and handouts were helpful.
+                                        The materials and the downloads were helpful. 
                                     </td>
                                     <td>
                                         <div class="number">1</div>
@@ -131,9 +131,9 @@
                                     </td>
                                 </tr>
 
-                                <tr title="I liked how the facilitators presented and delivered the content.">
+                                <tr title="I liked how the e-learning platform presented and delivered the content.">
                                     <td>
-                                        I liked how the facilitators presented and delivered the content.
+                                         I liked how the e-learning platform presented and delivered the content.
                                     </td>
                                     <td>
                                         <div class="number">1</div>
@@ -152,9 +152,9 @@
                                     </td>
                                 </tr>
 
-                                <tr title="The facilitators seemed knowledgeable about the subject matter.">
+                                <tr title="The presenters seemed knowledgeable about the subject matter.">
                                     <td>
-                                        The facilitators seemed knowledgeable about the subject matter.
+                                        The presenters seemed knowledgeable about the subject matter.
                                     </td>
                                     <td>
                                         <div class="number">1</div>
@@ -174,10 +174,9 @@
                                 </tr>
 
                                 <tr
-                                    title="The facilitators conveyed a positive and respectful attitude toward the participants.">
+                                    title="The presenters conveyed a positive and respectful attitude toward the subject for the participants.">
                                     <td>
-                                        The facilitators conveyed a positive and respectful attitude toward
-                                        the participants.
+                                        The presenters conveyed a positive and respectful attitude toward the subject for the participants.
                                     </td>
                                     <td>
                                         <div class="number">1</div>
@@ -282,10 +281,9 @@
                                     </td>
                                 </tr>
 
-                                <tr title="The learning environment and facilities were appropriate for this event.">
+                                <tr title="The learning environment was appropriate for this event.">
                                     <td>
-                                        The learning environment and facilities were appropriate for this
-                                        event.
+                                        The learning environment was appropriate for this event.
                                     </td>
                                     <td>
                                         <div class="number">1</div>
