--- a/students/__templates/students/reviews/assessment.html
+++ b/students/__templates/students/reviews/assessment.html
@@ -13,7 +13,7 @@
                 <div class="card-body">
 
                     <h6 class="card-title text-justify mb-3">
-                        Please give your assessment about "{{object}}" learning an event.
+                        Please give your assessment about "{{object}}" learning event.
                         Your thoughtful and objective response to each question is a highly valued part of
                         NYC Construction Safety Training's facilitation and the learning continuous
                         improvement
