--- a/students/__templates/students/reviews/assessment.html
+++ b/students/__templates/students/reviews/assessment.html
@@ -15,7 +15,7 @@
                     <h6 class="card-title text-justify mb-3">
                         Please give your assessment about "{{object}}" learning event.
                         Your thoughtful and objective response to each question is a highly valued part of
-                        NYC Construction Safety Training's facilitation and the learning continuous
+                        Construction Safety Training's facilitation and the learning continuous
                         improvement
                         process. Thank You.
                     </h6>
