--- a/students/__templates/student_base.html
+++ b/students/__templates/student_base.html
@@ -14,18 +14,32 @@
 
   <link rel="icon" type="image/png" href="{% static '/images/logo5.png' %}">
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-HBMW2QHSJ4"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
+     <!-- Global site tag (gtag.js) - Google Analytics -->
+     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-190250545-1"></script>
 
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag('js', new Date());
+     <script>
+         window.dataLayer = window.dataLayer || [];
 
-    gtag('config', 'G-HBMW2QHSJ4');
-  </script>
+         function gtag() {
+             dataLayer.push(arguments);
+         }
+         gtag('js', new Date());
+
+         gtag('config', 'UA-190250545-1');
+     </script>
+
+
+     <script async src="https://www.googletagmanager.com/gtag/js?id=G-NKBKFHN4MT"></script>
+     <script>
+         window.dataLayer = window.dataLayer || [];
+         function gtag() {
+             dataLayer.push(arguments);
+         }
+         gtag('js', new Date());
+
+         gtag('config', 'G-NKBKFHN4MT');
+     </script>
+
 
 </head>
 
