--- a/students/__templates/registration/signup_form.html
+++ b/students/__templates/registration/signup_form.html
@@ -56,7 +56,7 @@
                                     <input class="form-check-input" type="checkbox" value="" required name="terms"
                                         id="termsCheck">
                                     <label class="form-check-label" for="termsCheck">
-                                        <a class="text-muted" href="{% url 'legal_detail' %}">
+                                        <a class="text-muted" href="{% url 'privacy_policy' %}">
                                             By creating an account you are agreeing to adhere to the NYCCST Terms of
                                             Service
                                         </a>
